<resources>
    <string name="app_name">Recipes</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutritional_values">Nutritional Values</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="loading_error">There was an error loading the recipes.</string>
    <string name="retry">Retry</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">logout</string>
    <string name="invalid_email">Email is invalid.</string>
    <string name="invalid_password">Password is invalid</string>
</resources>